--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Krishna Dairy Products Pvt. Ltd.</title>
   <link rel="stylesheet" href="styles.css">
+  <!-- Add Firebase SDKs -->
+  <script type="module" src="script.js"></script>
 </head>
 <body>
   <div class="container">
@@ -28,8 +30,8 @@
         <select id="customerList" required>
           <option value="">Select Customer</option>
         </select>
-        <input type="number" id="milkQuantity" placeholder="Milk Quantity (Liters)" required>
-        <input type="number" id="fatContent" placeholder="Fat Content (%)" required>
+        <input type="decimal" id="milkQuantity" placeholder="Milk Quantity (Liters)" required>
+        <input type="decimal" id="fatContent" placeholder="Fat Content (%)" required>
         <button type="submit">Record Milk</button>
       </form>
     </div>
@@ -54,12 +56,5 @@
       </table>
     </div>
   </div>
-
-  <!-- Firebase SDK -->
-  <script type="module" src="https://www.gstatic.com/firebasejs/10.x.x/firebase-app.js"></script>
-  <script type="module" src="https://www.gstatic.com/firebasejs/10.x.x/firebase-database.js"></script>
-  
-  <!-- Main Script File -->
-  <script type="module" src="script.js"></script>
 </body>
 </html>
