--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Krishna Dairy Products Pvt. Ltd.</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <link rel="stylesheet" href="styles.css">  </head>
 <body>
     <div class="container">
         <h1>Krishna Dairy Products Pvt. Ltd.</h1>
@@ -50,6 +49,6 @@
             </table>
         </div>
     </div>
-    <script type="module" src="script.js"></script>
-</body>
+
+    <script type="module" src="script.js"></script>  </body>
 </html>
